--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -40,6 +40,8 @@ services:
     image: postgres:alpine
     networks:
       - default
+    ports:
+      - "5455:5432"
     volumes:
       - database-data:/var/lib/postgresql/data
     environment:
